--- a/Web.config
+++ b/Web.config
@@ -12,6 +12,8 @@
     <add key="ServiceBusIssuerName" value="" />
     <add key="ServiceBusIssuerSecretKey" value="" />
     -->
+    <add key="MICROSOFT_APP_ID" value="131601f3-4fb6-4e67-afea-4549c0d8d80e" />
+  <add key="MICROSOFT_APP_PASSWORD" value="vZTiqbk1CsWyN1YYwEghV3Y" />
   </appSettings>
   <system.webServer>
     <!-- mimeMap enables IIS to serve particular file types as specified by fileExtension. -->
